--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -32,10 +32,10 @@
     <div class="topbar" data-dropdown="dropdown">
         <div class="topbar-inner">
             <div class="container">
-                <a class="brand" href="/">Contrat-Agile.org</a>
+                <a class="brand" href="index.html">Contrat-Agile.org</a>
                 <ul class="nav">
                     <li class="active"><a href="index.html ">Accueil</a></li>
-                    <li class=" dropdown"><a href="/application/contrat"
+                    <li class=" dropdown"><a href="#"
                                              class="dropdown-toggle">Le Contrat</a>
                         <ul class="dropdown-menu">
                             <li><a href="structure.html">Structure</a></li>
