--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -4,6 +4,7 @@
 <head>
     <title>Contrat-Agile.org</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="google-site-verification" content="-VoacFZvKnoCRn-KK8BNBPYAz7YkDdBTY9M_fQGmkCU" />
     <link rel="stylesheet" href="css/bootstrap-1.3.0.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/jquery-1.5.2.min.js"></script>
