Some other dead links

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -42,7 +42,7 @@
                             <li><a href="structure.html">Structure</a></li>
                             <li class="divider"/>
                             <li><a href="pqs.html">PQS</a></li>
-                            <li><a href="annexe-finnanciere.html">Annexe financière</a></li>
+                            <li><a href="annexe-financiere.html">Annexe financière</a></li>
                         </ul>
                     </li>
                     <li class=""><a href="apropos.html">À propos</a></li>
