changement xebia en publicis et add logo

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -71,7 +71,7 @@
 
                     </div>
                     <div class="span2 offset12">
-                        &copy; Xebia 2011</a>
+                        &copy; Publicis Sapient Engineering (anciennement Xebia) 2011</a>
                         <br/>
                     </div>
                 </div>
