--- a/css/style.css
+++ b/css/style.css
@@ -49,11 +49,11 @@ p {
     background-color: #A176A0;
     font-size: 120%;
     padding: 20px;
-    background-image: -webkit-linear-gradient(#FE414D, #A176A0);
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#FE414D), to(#A176A0));
-    background-image: -moz-linear-gradient(#FE414D, #A176A0);
-    background-image: -o-linear-gradient(top, #FE414D, #A176A0);
-    background-image: -khtml-gradient(linear, left top, left bottom, from(#FE414D), to(#A176A0));
+    background-image: -webkit-linear-gradient(#FE414D, #FE414D);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#FE414D), to(#FE414D));
+    background-image: -moz-linear-gradient(#FE414D, #FE414D);
+    background-image: -o-linear-gradient(top, #FE414D, #FE414D);
+    background-image: -khtml-gradient(linear, left top, left bottom, from(#FE414D), to(#FE414D));
     background-repeat: repeat no-repeat;
     border-bottom-color: rgba(0, 0, 0, 0.246094);
     border-left-color: rgba(0, 0, 0, 0.0976562);
